refactor: setup clean architecture, swagger docs and logger structure (slog)
